// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LookupFieldOptions Lookup field options 1`] = `
<MockLookupProvider>
  <LookupFieldOptions
    domainIndex={1}
    field={
      Immutable.Record {
        "conceptURI": undefined,
        "conditionalFormats": Immutable.List [],
        "defaultScale": undefined,
        "defaultValueType": undefined,
        "defaultValue": undefined,
        "defaultDisplayValue": undefined,
        "description": undefined,
        "dimension": undefined,
        "excludeFromShifting": false,
        "format": undefined,
        "hidden": false,
        "importAliases": undefined,
        "label": undefined,
        "lookupContainer": undefined,
        "lookupQuery": undefined,
        "lookupSchema": "exp",
        "lookupValidator": undefined,
        "lookupIsValid": true,
        "measure": undefined,
        "mvEnabled": false,
        "name": undefined,
        "PHI": undefined,
        "propertyId": undefined,
        "propertyURI": undefined,
        "propertyValidators": Immutable.List [],
        "rangeValidators": Immutable.List [],
        "rangeURI": undefined,
        "regexValidators": Immutable.List [],
        "textChoiceValidator": undefined,
        "recommendedVariable": false,
        "uniqueConstraint": false,
        "required": false,
        "scale": 4000,
        "URL": undefined,
        "shownInDetailsView": true,
        "shownInInsertView": true,
        "shownInUpdateView": true,
        "visible": true,
        "dataType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Lookup",
          "name": "lookup",
          "rangeURI": undefined,
          "alternateRangeURI": undefined,
          "shortDisplay": undefined,
          "lookupSchema": undefined,
          "lookupQuery": undefined,
        },
        "lookupQueryValue": "Data",
        "lookupType": undefined,
        "original": Immutable.Record {
          "conceptURI": undefined,
          "conditionalFormats": Immutable.List [],
          "defaultScale": undefined,
          "defaultValueType": undefined,
          "defaultValue": undefined,
          "defaultDisplayValue": undefined,
          "description": undefined,
          "dimension": undefined,
          "excludeFromShifting": false,
          "format": undefined,
          "hidden": false,
          "importAliases": undefined,
          "label": undefined,
          "lookupContainer": undefined,
          "lookupQuery": undefined,
          "lookupSchema": undefined,
          "lookupValidator": undefined,
          "lookupIsValid": undefined,
          "measure": undefined,
          "mvEnabled": false,
          "name": "key",
          "PHI": undefined,
          "propertyId": 1,
          "propertyURI": "test",
          "propertyValidators": Immutable.List [],
          "rangeValidators": Immutable.List [],
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "regexValidators": Immutable.List [],
          "textChoiceValidator": undefined,
          "recommendedVariable": false,
          "uniqueConstraint": false,
          "required": false,
          "scale": 4000,
          "URL": undefined,
          "shownInDetailsView": true,
          "shownInInsertView": true,
          "shownInUpdateView": true,
          "visible": true,
          "dataType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Integer",
            "name": "int",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "alternateRangeURI": "xsd:int",
            "shortDisplay": undefined,
            "lookupSchema": undefined,
            "lookupQuery": undefined,
          },
          "lookupQueryValue": undefined,
          "lookupType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Lookup",
            "name": "lookup",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "alternateRangeURI": undefined,
            "shortDisplay": undefined,
            "lookupSchema": undefined,
            "lookupQuery": undefined,
          },
          "original": {
            "conceptURI": undefined,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Integer",
              "name": "int",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "alternateRangeURI": "xsd:int",
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "name": "key",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          },
          "updatedField": false,
          "isPrimaryKey": false,
          "lockType": "NotLocked",
          "wrappedColumnName": undefined,
          "disablePhiLevel": false,
          "lockExistingField": false,
          "sourceOntology": undefined,
          "conceptSubtree": undefined,
          "conceptLabelColumn": undefined,
          "conceptImportColumn": undefined,
          "principalConceptCode": undefined,
          "derivationDataScope": undefined,
          "selected": false,
          "scannable": false,
        },
        "updatedField": false,
        "isPrimaryKey": false,
        "lockType": "NotLocked",
        "wrappedColumnName": undefined,
        "disablePhiLevel": false,
        "lockExistingField": false,
        "sourceOntology": undefined,
        "conceptSubtree": undefined,
        "conceptLabelColumn": undefined,
        "conceptImportColumn": undefined,
        "principalConceptCode": undefined,
        "derivationDataScope": undefined,
        "selected": false,
        "scannable": false,
      }
    }
    index={1}
    label="Lookup Field Options"
    lockType="NotLocked"
    lookupContainer="/StudyVerifyProject/My Study"
    onChange={[MockFunction]}
    onMultiChange={[MockFunction]}
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12"
        >
          <div
            className="domain-field-section-heading"
          >
            Lookup Field Options
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Folder
          </div>
          <FolderSelect
            disabled={false}
            id="domainpropertiesrow-lookupContainer-1-1"
            key="domainpropertiesrow-lookupContainer-1-1"
            onChange={[Function]}
            value="/StudyVerifyProject/My Study"
          >
            <FolderSelectImpl
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupContainer-1-1"
              name="domainpropertiesrow-lookupContainer"
              onChange={[Function]}
              value="/StudyVerifyProject/My Study"
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                context={
                  {
                    "activeContainer": Container {
                      "activeModules": [],
                      "effectivePermissions": [],
                      "folderType": "",
                      "formats": {
                        "dateFormat": "",
                        "dateTimeFormat": "",
                        "numberFormat": "",
                        "timeFormat": "",
                      },
                      "hasRestrictedActiveModule": false,
                      "iconHref": "",
                      "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                      "isContainerTab": false,
                      "isWorkbook": false,
                      "name": "My Study",
                      "parentId": "",
                      "parentPath": "",
                      "path": "/StudyVerifyProject/My Study",
                      "sortOrder": 0,
                      "startUrl": "",
                      "title": "",
                      "type": "",
                    },
                    "fetchContainers": [Function],
                    "fetchQueries": [Function],
                    "fetchSchemas": [Function],
                    "getExcludedSchemaQueryNames": [Function],
                  }
                }
                disabled={false}
                id="domainpropertiesrow-lookupContainer-1-1"
                name="domainpropertiesrow-lookupContainer"
                onChange={[Function]}
                value="/StudyVerifyProject/My Study"
              >
                <select
                  className="form-control"
                  context={
                    {
                      "activeContainer": Container {
                        "activeModules": [],
                        "effectivePermissions": [],
                        "folderType": "",
                        "formats": {
                          "dateFormat": "",
                          "dateTimeFormat": "",
                          "numberFormat": "",
                          "timeFormat": "",
                        },
                        "hasRestrictedActiveModule": false,
                        "iconHref": "",
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "startUrl": "",
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                      "getExcludedSchemaQueryNames": [Function],
                    }
                  }
                  disabled={false}
                  id="domainpropertiesrow-lookupContainer-1-1"
                  name="domainpropertiesrow-lookupContainer"
                  onChange={[Function]}
                  value="/StudyVerifyProject/My Study"
                >
                  <option
                    key="_current"
                    value=""
                  >
                    Current 
                    Folder
                  </option>
                </select>
              </FormControl>
            </FolderSelectImpl>
          </FolderSelect>
        </div>
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Schema
          </div>
          <SchemaSelect
            containerPath="/StudyVerifyProject/My Study"
            disabled={false}
            id="domainpropertiesrow-lookupSchema-1-1"
            key="domainpropertiesrow-lookupSchema-1-1"
            onChange={[Function]}
            value="exp"
          >
            <SchemaSelectImpl
              containerPath="/StudyVerifyProject/My Study"
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupSchema-1-1"
              name="domainpropertiesrow-lookupSchema"
              onChange={[Function]}
              value="exp"
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                disabled={false}
                id="domainpropertiesrow-lookupSchema-1-1"
                name="domainpropertiesrow-lookupSchema"
                onChange={[Function]}
                placeholder="Select Schema"
                value="exp"
              >
                <select
                  className="form-control"
                  disabled={false}
                  id="domainpropertiesrow-lookupSchema-1-1"
                  name="domainpropertiesrow-lookupSchema"
                  onChange={[Function]}
                  placeholder="Select Schema"
                  value="exp"
                >
                  <option
                    disabled={true}
                    key="_loading"
                    value="exp"
                  >
                    Loading...
                  </option>
                </select>
              </FormControl>
            </SchemaSelectImpl>
          </SchemaSelect>
        </div>
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Table
          </div>
          <TargetTableSelect
            containerPath="/StudyVerifyProject/My Study"
            disabled={false}
            id="domainpropertiesrow-lookupQueryValue-1-1"
            key="domainpropertiesrow-lookupQueryValue-1-1"
            lookupIsValid={true}
            lookupURI="http://www.w3.org/2001/XMLSchema#int"
            onChange={[Function]}
            schemaName="exp"
            shouldDisableNonExists={true}
            value="Data"
          >
            <TargetTableSelectImpl
              containerPath="/StudyVerifyProject/My Study"
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupQueryValue-1-1"
              lookupIsValid={true}
              lookupURI="http://www.w3.org/2001/XMLSchema#int"
              name="domainpropertiesrow-lookupQueryValue"
              onChange={[Function]}
              schemaName="exp"
              shouldDisableNonExists={true}
              value="Data"
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                disabled={true}
                id="domainpropertiesrow-lookupQueryValue-1-1"
                name="domainpropertiesrow-lookupQueryValue"
                onChange={[Function]}
                value="Data"
              >
                <select
                  className="form-control"
                  disabled={true}
                  id="domainpropertiesrow-lookupQueryValue-1-1"
                  name="domainpropertiesrow-lookupQueryValue"
                  onChange={[Function]}
                  value="Data"
                >
                  <option
                    disabled={true}
                    key="_loading"
                    value="Data"
                  >
                    Loading...
                  </option>
                </select>
              </FormControl>
            </TargetTableSelectImpl>
          </TargetTableSelect>
        </div>
        <div
          className="col-xs-6"
        >
          <div
            className="domain-field-label"
          >
            Lookup Validator
          </div>
          <Checkbox
            bsClass="checkbox"
            checked={false}
            className="domain-field-checkbox-margin"
            disabled={false}
            id="domainpropertiesrow-lookupValidator-1-1"
            inline={false}
            name="domainpropertiesrow-lookupValidator"
            onChange={[Function]}
            title=""
          >
            <div
              className="domain-field-checkbox-margin checkbox"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  id="domainpropertiesrow-lookupValidator-1-1"
                  name="domainpropertiesrow-lookupValidator"
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="domain-lookup-validator-text"
                >
                  Ensure Value Exists in Lookup Target
                </span>
                <LabelHelpTip
                  title="Lookup Validator"
                >
                  <OverlayTrigger
                    id="label-help-tip0"
                    overlay={
                      <Popover
                        id="label-help-tip-popover"
                        title="Lookup Validator"
                      >
                        <div>
                          Lookup validators allow you to require that any value is present in the lookup's target table or query
                        </div>
                      </Popover>
                    }
                  >
                    <div
                      className="overlay-trigger"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="label-help-target"
                      >
                        <span
                          className="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </OverlayTrigger>
                </LabelHelpTip>
              </label>
            </div>
          </Checkbox>
        </div>
      </div>
    </div>
  </LookupFieldOptions>
</MockLookupProvider>
`;

exports[`LookupFieldOptions Selected container changes queries 1`] = `
<MockLookupProvider>
  <LookupFieldOptions
    domainIndex={1}
    field={
      Immutable.Record {
        "conceptURI": undefined,
        "conditionalFormats": Immutable.List [],
        "defaultScale": undefined,
        "defaultValueType": undefined,
        "defaultValue": undefined,
        "defaultDisplayValue": undefined,
        "description": undefined,
        "dimension": undefined,
        "excludeFromShifting": false,
        "format": undefined,
        "hidden": false,
        "importAliases": undefined,
        "label": undefined,
        "lookupContainer": undefined,
        "lookupQuery": undefined,
        "lookupSchema": "",
        "lookupValidator": undefined,
        "lookupIsValid": true,
        "measure": undefined,
        "mvEnabled": false,
        "name": undefined,
        "PHI": undefined,
        "propertyId": undefined,
        "propertyURI": undefined,
        "propertyValidators": Immutable.List [],
        "rangeValidators": Immutable.List [],
        "rangeURI": undefined,
        "regexValidators": Immutable.List [],
        "textChoiceValidator": undefined,
        "recommendedVariable": false,
        "uniqueConstraint": false,
        "required": false,
        "scale": 4000,
        "URL": undefined,
        "shownInDetailsView": true,
        "shownInInsertView": true,
        "shownInUpdateView": true,
        "visible": true,
        "dataType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Lookup",
          "name": "lookup",
          "rangeURI": undefined,
          "alternateRangeURI": undefined,
          "shortDisplay": undefined,
          "lookupSchema": undefined,
          "lookupQuery": undefined,
        },
        "lookupQueryValue": "",
        "lookupType": undefined,
        "original": Immutable.Record {
          "conceptURI": undefined,
          "conditionalFormats": Immutable.List [],
          "defaultScale": undefined,
          "defaultValueType": undefined,
          "defaultValue": undefined,
          "defaultDisplayValue": undefined,
          "description": undefined,
          "dimension": undefined,
          "excludeFromShifting": false,
          "format": undefined,
          "hidden": false,
          "importAliases": undefined,
          "label": undefined,
          "lookupContainer": undefined,
          "lookupQuery": undefined,
          "lookupSchema": undefined,
          "lookupValidator": undefined,
          "lookupIsValid": undefined,
          "measure": undefined,
          "mvEnabled": false,
          "name": "key",
          "PHI": undefined,
          "propertyId": 1,
          "propertyURI": "test",
          "propertyValidators": Immutable.List [],
          "rangeValidators": Immutable.List [],
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "regexValidators": Immutable.List [],
          "textChoiceValidator": undefined,
          "recommendedVariable": false,
          "uniqueConstraint": false,
          "required": false,
          "scale": 4000,
          "URL": undefined,
          "shownInDetailsView": true,
          "shownInInsertView": true,
          "shownInUpdateView": true,
          "visible": true,
          "dataType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Integer",
            "name": "int",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "alternateRangeURI": "xsd:int",
            "shortDisplay": undefined,
            "lookupSchema": undefined,
            "lookupQuery": undefined,
          },
          "lookupQueryValue": undefined,
          "lookupType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Lookup",
            "name": "lookup",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "alternateRangeURI": undefined,
            "shortDisplay": undefined,
            "lookupSchema": undefined,
            "lookupQuery": undefined,
          },
          "original": {
            "conceptURI": undefined,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Integer",
              "name": "int",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "alternateRangeURI": "xsd:int",
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "name": "key",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          },
          "updatedField": false,
          "isPrimaryKey": false,
          "lockType": "NotLocked",
          "wrappedColumnName": undefined,
          "disablePhiLevel": false,
          "lockExistingField": false,
          "sourceOntology": undefined,
          "conceptSubtree": undefined,
          "conceptLabelColumn": undefined,
          "conceptImportColumn": undefined,
          "principalConceptCode": undefined,
          "derivationDataScope": undefined,
          "selected": false,
          "scannable": false,
        },
        "updatedField": false,
        "isPrimaryKey": false,
        "lockType": "NotLocked",
        "wrappedColumnName": undefined,
        "disablePhiLevel": false,
        "lockExistingField": false,
        "sourceOntology": undefined,
        "conceptSubtree": undefined,
        "conceptLabelColumn": undefined,
        "conceptImportColumn": undefined,
        "principalConceptCode": undefined,
        "derivationDataScope": undefined,
        "selected": false,
        "scannable": false,
      }
    }
    index={1}
    label="Lookup Field Options"
    lockType="NotLocked"
    lookupContainer="/StudyVerifyProject"
    onChange={[MockFunction]}
    onMultiChange={[MockFunction]}
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12"
        >
          <div
            className="domain-field-section-heading"
          >
            Lookup Field Options
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Folder
          </div>
          <FolderSelect
            disabled={false}
            id="domainpropertiesrow-lookupContainer-1-1"
            key="domainpropertiesrow-lookupContainer-1-1"
            onChange={[Function]}
            value="/StudyVerifyProject"
          >
            <FolderSelectImpl
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupContainer-1-1"
              name="domainpropertiesrow-lookupContainer"
              onChange={[Function]}
              value="/StudyVerifyProject"
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                context={
                  {
                    "activeContainer": Container {
                      "activeModules": [],
                      "effectivePermissions": [],
                      "folderType": "",
                      "formats": {
                        "dateFormat": "",
                        "dateTimeFormat": "",
                        "numberFormat": "",
                        "timeFormat": "",
                      },
                      "hasRestrictedActiveModule": false,
                      "iconHref": "",
                      "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                      "isContainerTab": false,
                      "isWorkbook": false,
                      "name": "My Study",
                      "parentId": "",
                      "parentPath": "",
                      "path": "/StudyVerifyProject/My Study",
                      "sortOrder": 0,
                      "startUrl": "",
                      "title": "",
                      "type": "",
                    },
                    "fetchContainers": [Function],
                    "fetchQueries": [Function],
                    "fetchSchemas": [Function],
                    "getExcludedSchemaQueryNames": [Function],
                  }
                }
                disabled={false}
                id="domainpropertiesrow-lookupContainer-1-1"
                name="domainpropertiesrow-lookupContainer"
                onChange={[Function]}
                value="/StudyVerifyProject"
              >
                <select
                  className="form-control"
                  context={
                    {
                      "activeContainer": Container {
                        "activeModules": [],
                        "effectivePermissions": [],
                        "folderType": "",
                        "formats": {
                          "dateFormat": "",
                          "dateTimeFormat": "",
                          "numberFormat": "",
                          "timeFormat": "",
                        },
                        "hasRestrictedActiveModule": false,
                        "iconHref": "",
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "startUrl": "",
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                      "getExcludedSchemaQueryNames": [Function],
                    }
                  }
                  disabled={false}
                  id="domainpropertiesrow-lookupContainer-1-1"
                  name="domainpropertiesrow-lookupContainer"
                  onChange={[Function]}
                  value="/StudyVerifyProject"
                >
                  <option
                    key="_current"
                    value=""
                  >
                    Current 
                    Folder
                  </option>
                  <option
                    key="a21a06e1-4058-1037-95c6-1e81b2533cfd"
                    value="/StudyVerifyProject"
                  >
                    /StudyVerifyProject
                  </option>
                  <option
                    key="e0ea3e55-3420-1035-8057-68fea9bfb3a0"
                    value="/StudyVerifyProject/My Study"
                  >
                    /StudyVerifyProject/My Study
                  </option>
                </select>
              </FormControl>
            </FolderSelectImpl>
          </FolderSelect>
        </div>
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Schema
          </div>
          <SchemaSelect
            containerPath="/StudyVerifyProject"
            disabled={false}
            id="domainpropertiesrow-lookupSchema-1-1"
            key="domainpropertiesrow-lookupSchema-1-1"
            onChange={[Function]}
            value=""
          >
            <SchemaSelectImpl
              containerPath="/StudyVerifyProject"
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupSchema-1-1"
              name="domainpropertiesrow-lookupSchema"
              onChange={[Function]}
              value=""
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                disabled={false}
                id="domainpropertiesrow-lookupSchema-1-1"
                name="domainpropertiesrow-lookupSchema"
                onChange={[Function]}
                placeholder="Select Schema"
                value=""
              >
                <select
                  className="form-control"
                  disabled={false}
                  id="domainpropertiesrow-lookupSchema-1-1"
                  name="domainpropertiesrow-lookupSchema"
                  onChange={[Function]}
                  placeholder="Select Schema"
                  value=""
                >
                  <option
                    key="_default"
                  />
                  <option
                    key="exp"
                    value="exp"
                  >
                    exp
                  </option>
                  <option
                    key="exp.data"
                    value="exp.data"
                  >
                    exp.data
                  </option>
                  <option
                    key="exp.materials"
                    value="exp.materials"
                  >
                    exp.materials
                  </option>
                  <option
                    key="lists"
                    value="lists"
                  >
                    lists
                  </option>
                  <option
                    key="study"
                    value="study"
                  >
                    study
                  </option>
                </select>
              </FormControl>
            </SchemaSelectImpl>
          </SchemaSelect>
        </div>
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Table
          </div>
          <TargetTableSelect
            containerPath="/StudyVerifyProject"
            disabled={false}
            id="domainpropertiesrow-lookupQueryValue-1-1"
            key="domainpropertiesrow-lookupQueryValue-1-1"
            lookupIsValid={true}
            lookupURI="http://www.w3.org/2001/XMLSchema#int"
            onChange={[Function]}
            schemaName=""
            shouldDisableNonExists={true}
            value=""
          >
            <TargetTableSelectImpl
              containerPath="/StudyVerifyProject"
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupQueryValue-1-1"
              lookupIsValid={true}
              lookupURI="http://www.w3.org/2001/XMLSchema#int"
              name="domainpropertiesrow-lookupQueryValue"
              onChange={[Function]}
              schemaName=""
              shouldDisableNonExists={true}
              value=""
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                disabled={false}
                id="domainpropertiesrow-lookupQueryValue-1-1"
                name="domainpropertiesrow-lookupQueryValue"
                onChange={[Function]}
                value=""
              >
                <select
                  className="form-control"
                  disabled={false}
                  id="domainpropertiesrow-lookupQueryValue-1-1"
                  name="domainpropertiesrow-lookupQueryValue"
                  onChange={[Function]}
                  value=""
                >
                  <option
                    key="_default"
                  />
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|Data"
                    value="http://www.w3.org/2001/XMLSchema#int|Data"
                  >
                    Data
                     (
                    Integer
                    )
                  </option>
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                    value="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                  >
                    DataInputs
                     (
                    Integer
                    )
                  </option>
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|Runs"
                    value="http://www.w3.org/2001/XMLSchema#int|Runs"
                  >
                    Runs
                     (
                    Integer
                    )
                  </option>
                </select>
              </FormControl>
            </TargetTableSelectImpl>
          </TargetTableSelect>
        </div>
        <div
          className="col-xs-6"
        >
          <div
            className="domain-field-label"
          >
            Lookup Validator
          </div>
          <Checkbox
            bsClass="checkbox"
            checked={false}
            className="domain-field-checkbox-margin"
            disabled={false}
            id="domainpropertiesrow-lookupValidator-1-1"
            inline={false}
            name="domainpropertiesrow-lookupValidator"
            onChange={[Function]}
            title=""
          >
            <div
              className="domain-field-checkbox-margin checkbox"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  id="domainpropertiesrow-lookupValidator-1-1"
                  name="domainpropertiesrow-lookupValidator"
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="domain-lookup-validator-text"
                >
                  Ensure Value Exists in Lookup Target
                </span>
                <LabelHelpTip
                  title="Lookup Validator"
                >
                  <OverlayTrigger
                    id="label-help-tip3"
                    overlay={
                      <Popover
                        id="label-help-tip-popover"
                        title="Lookup Validator"
                      >
                        <div>
                          Lookup validators allow you to require that any value is present in the lookup's target table or query
                        </div>
                      </Popover>
                    }
                  >
                    <div
                      className="overlay-trigger"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="label-help-target"
                      >
                        <span
                          className="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </OverlayTrigger>
                </LabelHelpTip>
              </label>
            </div>
          </Checkbox>
        </div>
      </div>
    </div>
  </LookupFieldOptions>
</MockLookupProvider>
`;

exports[`LookupFieldOptions Selected container changes schemas 1`] = `
<MockLookupProvider>
  <LookupFieldOptions
    domainIndex={1}
    field={
      Immutable.Record {
        "conceptURI": undefined,
        "conditionalFormats": Immutable.List [],
        "defaultScale": undefined,
        "defaultValueType": undefined,
        "defaultValue": undefined,
        "defaultDisplayValue": undefined,
        "description": undefined,
        "dimension": undefined,
        "excludeFromShifting": false,
        "format": undefined,
        "hidden": false,
        "importAliases": undefined,
        "label": undefined,
        "lookupContainer": undefined,
        "lookupQuery": undefined,
        "lookupSchema": "",
        "lookupValidator": undefined,
        "lookupIsValid": undefined,
        "measure": undefined,
        "mvEnabled": false,
        "name": undefined,
        "PHI": undefined,
        "propertyId": undefined,
        "propertyURI": undefined,
        "propertyValidators": Immutable.List [],
        "rangeValidators": Immutable.List [],
        "rangeURI": undefined,
        "regexValidators": Immutable.List [],
        "textChoiceValidator": undefined,
        "recommendedVariable": false,
        "uniqueConstraint": false,
        "required": false,
        "scale": 4000,
        "URL": undefined,
        "shownInDetailsView": true,
        "shownInInsertView": true,
        "shownInUpdateView": true,
        "visible": true,
        "dataType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Lookup",
          "name": "lookup",
          "rangeURI": undefined,
          "alternateRangeURI": undefined,
          "shortDisplay": undefined,
          "lookupSchema": undefined,
          "lookupQuery": undefined,
        },
        "lookupQueryValue": "",
        "lookupType": undefined,
        "original": Immutable.Record {
          "conceptURI": undefined,
          "conditionalFormats": Immutable.List [],
          "defaultScale": undefined,
          "defaultValueType": undefined,
          "defaultValue": undefined,
          "defaultDisplayValue": undefined,
          "description": undefined,
          "dimension": undefined,
          "excludeFromShifting": false,
          "format": undefined,
          "hidden": false,
          "importAliases": undefined,
          "label": undefined,
          "lookupContainer": undefined,
          "lookupQuery": undefined,
          "lookupSchema": undefined,
          "lookupValidator": undefined,
          "lookupIsValid": undefined,
          "measure": undefined,
          "mvEnabled": false,
          "name": "key",
          "PHI": undefined,
          "propertyId": 1,
          "propertyURI": "test",
          "propertyValidators": Immutable.List [],
          "rangeValidators": Immutable.List [],
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "regexValidators": Immutable.List [],
          "textChoiceValidator": undefined,
          "recommendedVariable": false,
          "uniqueConstraint": false,
          "required": false,
          "scale": 4000,
          "URL": undefined,
          "shownInDetailsView": true,
          "shownInInsertView": true,
          "shownInUpdateView": true,
          "visible": true,
          "dataType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Integer",
            "name": "int",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "alternateRangeURI": "xsd:int",
            "shortDisplay": undefined,
            "lookupSchema": undefined,
            "lookupQuery": undefined,
          },
          "lookupQueryValue": undefined,
          "lookupType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Lookup",
            "name": "lookup",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "alternateRangeURI": undefined,
            "shortDisplay": undefined,
            "lookupSchema": undefined,
            "lookupQuery": undefined,
          },
          "original": {
            "conceptURI": undefined,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Integer",
              "name": "int",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "alternateRangeURI": "xsd:int",
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "name": "key",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          },
          "updatedField": false,
          "isPrimaryKey": false,
          "lockType": "NotLocked",
          "wrappedColumnName": undefined,
          "disablePhiLevel": false,
          "lockExistingField": false,
          "sourceOntology": undefined,
          "conceptSubtree": undefined,
          "conceptLabelColumn": undefined,
          "conceptImportColumn": undefined,
          "principalConceptCode": undefined,
          "derivationDataScope": undefined,
          "selected": false,
          "scannable": false,
        },
        "updatedField": false,
        "isPrimaryKey": false,
        "lockType": "NotLocked",
        "wrappedColumnName": undefined,
        "disablePhiLevel": false,
        "lockExistingField": false,
        "sourceOntology": undefined,
        "conceptSubtree": undefined,
        "conceptLabelColumn": undefined,
        "conceptImportColumn": undefined,
        "principalConceptCode": undefined,
        "derivationDataScope": undefined,
        "selected": false,
        "scannable": false,
      }
    }
    index={1}
    label="Lookup Field Options"
    lockType="NotLocked"
    lookupContainer="/StudyVerifyProject"
    onChange={[MockFunction]}
    onMultiChange={[MockFunction]}
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12"
        >
          <div
            className="domain-field-section-heading"
          >
            Lookup Field Options
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Folder
          </div>
          <FolderSelect
            disabled={false}
            id="domainpropertiesrow-lookupContainer-1-1"
            key="domainpropertiesrow-lookupContainer-1-1"
            onChange={[Function]}
            value="/StudyVerifyProject"
          >
            <FolderSelectImpl
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupContainer-1-1"
              name="domainpropertiesrow-lookupContainer"
              onChange={[Function]}
              value="/StudyVerifyProject"
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                context={
                  {
                    "activeContainer": Container {
                      "activeModules": [],
                      "effectivePermissions": [],
                      "folderType": "",
                      "formats": {
                        "dateFormat": "",
                        "dateTimeFormat": "",
                        "numberFormat": "",
                        "timeFormat": "",
                      },
                      "hasRestrictedActiveModule": false,
                      "iconHref": "",
                      "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                      "isContainerTab": false,
                      "isWorkbook": false,
                      "name": "My Study",
                      "parentId": "",
                      "parentPath": "",
                      "path": "/StudyVerifyProject/My Study",
                      "sortOrder": 0,
                      "startUrl": "",
                      "title": "",
                      "type": "",
                    },
                    "fetchContainers": [Function],
                    "fetchQueries": [Function],
                    "fetchSchemas": [Function],
                    "getExcludedSchemaQueryNames": [Function],
                  }
                }
                disabled={false}
                id="domainpropertiesrow-lookupContainer-1-1"
                name="domainpropertiesrow-lookupContainer"
                onChange={[Function]}
                value="/StudyVerifyProject"
              >
                <select
                  className="form-control"
                  context={
                    {
                      "activeContainer": Container {
                        "activeModules": [],
                        "effectivePermissions": [],
                        "folderType": "",
                        "formats": {
                          "dateFormat": "",
                          "dateTimeFormat": "",
                          "numberFormat": "",
                          "timeFormat": "",
                        },
                        "hasRestrictedActiveModule": false,
                        "iconHref": "",
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "startUrl": "",
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                      "getExcludedSchemaQueryNames": [Function],
                    }
                  }
                  disabled={false}
                  id="domainpropertiesrow-lookupContainer-1-1"
                  name="domainpropertiesrow-lookupContainer"
                  onChange={[Function]}
                  value="/StudyVerifyProject"
                >
                  <option
                    key="_current"
                    value=""
                  >
                    Current 
                    Folder
                  </option>
                  <option
                    key="a21a06e1-4058-1037-95c6-1e81b2533cfd"
                    value="/StudyVerifyProject"
                  >
                    /StudyVerifyProject
                  </option>
                  <option
                    key="e0ea3e55-3420-1035-8057-68fea9bfb3a0"
                    value="/StudyVerifyProject/My Study"
                  >
                    /StudyVerifyProject/My Study
                  </option>
                </select>
              </FormControl>
            </FolderSelectImpl>
          </FolderSelect>
        </div>
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Schema
          </div>
          <SchemaSelect
            containerPath="/StudyVerifyProject"
            disabled={false}
            id="domainpropertiesrow-lookupSchema-1-1"
            key="domainpropertiesrow-lookupSchema-1-1"
            onChange={[Function]}
            value=""
          >
            <SchemaSelectImpl
              containerPath="/StudyVerifyProject"
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupSchema-1-1"
              name="domainpropertiesrow-lookupSchema"
              onChange={[Function]}
              value=""
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                disabled={false}
                id="domainpropertiesrow-lookupSchema-1-1"
                name="domainpropertiesrow-lookupSchema"
                onChange={[Function]}
                placeholder="Select Schema"
                value=""
              >
                <select
                  className="form-control"
                  disabled={false}
                  id="domainpropertiesrow-lookupSchema-1-1"
                  name="domainpropertiesrow-lookupSchema"
                  onChange={[Function]}
                  placeholder="Select Schema"
                  value=""
                >
                  <option
                    key="_default"
                  />
                  <option
                    key="exp"
                    value="exp"
                  >
                    exp
                  </option>
                  <option
                    key="exp.data"
                    value="exp.data"
                  >
                    exp.data
                  </option>
                  <option
                    key="exp.materials"
                    value="exp.materials"
                  >
                    exp.materials
                  </option>
                  <option
                    key="lists"
                    value="lists"
                  >
                    lists
                  </option>
                  <option
                    key="study"
                    value="study"
                  >
                    study
                  </option>
                </select>
              </FormControl>
            </SchemaSelectImpl>
          </SchemaSelect>
        </div>
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Table
          </div>
          <TargetTableSelect
            containerPath="/StudyVerifyProject"
            disabled={false}
            id="domainpropertiesrow-lookupQueryValue-1-1"
            key="domainpropertiesrow-lookupQueryValue-1-1"
            lookupURI="http://www.w3.org/2001/XMLSchema#int"
            onChange={[Function]}
            schemaName=""
            value=""
          >
            <TargetTableSelectImpl
              containerPath="/StudyVerifyProject"
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupQueryValue-1-1"
              lookupURI="http://www.w3.org/2001/XMLSchema#int"
              name="domainpropertiesrow-lookupQueryValue"
              onChange={[Function]}
              schemaName=""
              shouldDisableNonExists={true}
              value=""
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                disabled={false}
                id="domainpropertiesrow-lookupQueryValue-1-1"
                name="domainpropertiesrow-lookupQueryValue"
                onChange={[Function]}
                value=""
              >
                <select
                  className="form-control"
                  disabled={false}
                  id="domainpropertiesrow-lookupQueryValue-1-1"
                  name="domainpropertiesrow-lookupQueryValue"
                  onChange={[Function]}
                  value=""
                >
                  <option
                    key="_default"
                  />
                  <option
                    disabled={false}
                  >
                     (
                    Unknown
                    )
                  </option>
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|Data"
                    value="http://www.w3.org/2001/XMLSchema#int|Data"
                  >
                    Data
                     (
                    Integer
                    )
                  </option>
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                    value="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                  >
                    DataInputs
                     (
                    Integer
                    )
                  </option>
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|Runs"
                    value="http://www.w3.org/2001/XMLSchema#int|Runs"
                  >
                    Runs
                     (
                    Integer
                    )
                  </option>
                </select>
              </FormControl>
            </TargetTableSelectImpl>
          </TargetTableSelect>
        </div>
        <div
          className="col-xs-6"
        >
          <div
            className="domain-field-label"
          >
            Lookup Validator
          </div>
          <Checkbox
            bsClass="checkbox"
            checked={false}
            className="domain-field-checkbox-margin"
            disabled={false}
            id="domainpropertiesrow-lookupValidator-1-1"
            inline={false}
            name="domainpropertiesrow-lookupValidator"
            onChange={[Function]}
            title=""
          >
            <div
              className="domain-field-checkbox-margin checkbox"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  id="domainpropertiesrow-lookupValidator-1-1"
                  name="domainpropertiesrow-lookupValidator"
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="domain-lookup-validator-text"
                >
                  Ensure Value Exists in Lookup Target
                </span>
                <LabelHelpTip
                  title="Lookup Validator"
                >
                  <OverlayTrigger
                    id="label-help-tip1"
                    overlay={
                      <Popover
                        id="label-help-tip-popover"
                        title="Lookup Validator"
                      >
                        <div>
                          Lookup validators allow you to require that any value is present in the lookup's target table or query
                        </div>
                      </Popover>
                    }
                  >
                    <div
                      className="overlay-trigger"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="label-help-target"
                      >
                        <span
                          className="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </OverlayTrigger>
                </LabelHelpTip>
              </label>
            </div>
          </Checkbox>
        </div>
      </div>
    </div>
  </LookupFieldOptions>
</MockLookupProvider>
`;

exports[`LookupFieldOptions Selected schema changes queries 1`] = `
<MockLookupProvider>
  <LookupFieldOptions
    domainIndex={1}
    field={
      Immutable.Record {
        "conceptURI": undefined,
        "conditionalFormats": Immutable.List [],
        "defaultScale": undefined,
        "defaultValueType": undefined,
        "defaultValue": undefined,
        "defaultDisplayValue": undefined,
        "description": undefined,
        "dimension": undefined,
        "excludeFromShifting": false,
        "format": undefined,
        "hidden": false,
        "importAliases": undefined,
        "label": undefined,
        "lookupContainer": undefined,
        "lookupQuery": undefined,
        "lookupSchema": "study",
        "lookupValidator": undefined,
        "lookupIsValid": true,
        "measure": undefined,
        "mvEnabled": false,
        "name": undefined,
        "PHI": undefined,
        "propertyId": undefined,
        "propertyURI": undefined,
        "propertyValidators": Immutable.List [],
        "rangeValidators": Immutable.List [],
        "rangeURI": undefined,
        "regexValidators": Immutable.List [],
        "textChoiceValidator": undefined,
        "recommendedVariable": false,
        "uniqueConstraint": false,
        "required": false,
        "scale": 4000,
        "URL": undefined,
        "shownInDetailsView": true,
        "shownInInsertView": true,
        "shownInUpdateView": true,
        "visible": true,
        "dataType": Immutable.Record {
          "conceptURI": undefined,
          "display": "Lookup",
          "name": "lookup",
          "rangeURI": undefined,
          "alternateRangeURI": undefined,
          "shortDisplay": undefined,
          "lookupSchema": undefined,
          "lookupQuery": undefined,
        },
        "lookupQueryValue": "",
        "lookupType": undefined,
        "original": Immutable.Record {
          "conceptURI": undefined,
          "conditionalFormats": Immutable.List [],
          "defaultScale": undefined,
          "defaultValueType": undefined,
          "defaultValue": undefined,
          "defaultDisplayValue": undefined,
          "description": undefined,
          "dimension": undefined,
          "excludeFromShifting": false,
          "format": undefined,
          "hidden": false,
          "importAliases": undefined,
          "label": undefined,
          "lookupContainer": undefined,
          "lookupQuery": undefined,
          "lookupSchema": undefined,
          "lookupValidator": undefined,
          "lookupIsValid": undefined,
          "measure": undefined,
          "mvEnabled": false,
          "name": "key",
          "PHI": undefined,
          "propertyId": 1,
          "propertyURI": "test",
          "propertyValidators": Immutable.List [],
          "rangeValidators": Immutable.List [],
          "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          "regexValidators": Immutable.List [],
          "textChoiceValidator": undefined,
          "recommendedVariable": false,
          "uniqueConstraint": false,
          "required": false,
          "scale": 4000,
          "URL": undefined,
          "shownInDetailsView": true,
          "shownInInsertView": true,
          "shownInUpdateView": true,
          "visible": true,
          "dataType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Integer",
            "name": "int",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "alternateRangeURI": "xsd:int",
            "shortDisplay": undefined,
            "lookupSchema": undefined,
            "lookupQuery": undefined,
          },
          "lookupQueryValue": undefined,
          "lookupType": Immutable.Record {
            "conceptURI": undefined,
            "display": "Lookup",
            "name": "lookup",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
            "alternateRangeURI": undefined,
            "shortDisplay": undefined,
            "lookupSchema": undefined,
            "lookupQuery": undefined,
          },
          "original": {
            "conceptURI": undefined,
            "dataType": Immutable.Record {
              "conceptURI": undefined,
              "display": "Integer",
              "name": "int",
              "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
              "alternateRangeURI": "xsd:int",
              "shortDisplay": undefined,
              "lookupSchema": undefined,
              "lookupQuery": undefined,
            },
            "name": "key",
            "rangeURI": "http://www.w3.org/2001/XMLSchema#int",
          },
          "updatedField": false,
          "isPrimaryKey": false,
          "lockType": "NotLocked",
          "wrappedColumnName": undefined,
          "disablePhiLevel": false,
          "lockExistingField": false,
          "sourceOntology": undefined,
          "conceptSubtree": undefined,
          "conceptLabelColumn": undefined,
          "conceptImportColumn": undefined,
          "principalConceptCode": undefined,
          "derivationDataScope": undefined,
          "selected": false,
          "scannable": false,
        },
        "updatedField": false,
        "isPrimaryKey": false,
        "lockType": "NotLocked",
        "wrappedColumnName": undefined,
        "disablePhiLevel": false,
        "lockExistingField": false,
        "sourceOntology": undefined,
        "conceptSubtree": undefined,
        "conceptLabelColumn": undefined,
        "conceptImportColumn": undefined,
        "principalConceptCode": undefined,
        "derivationDataScope": undefined,
        "selected": false,
        "scannable": false,
      }
    }
    index={1}
    label="Lookup Field Options"
    lockType="NotLocked"
    lookupContainer="/StudyVerifyProject/My Study"
    onChange={[MockFunction]}
    onMultiChange={[MockFunction]}
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12"
        >
          <div
            className="domain-field-section-heading"
          >
            Lookup Field Options
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Folder
          </div>
          <FolderSelect
            disabled={false}
            id="domainpropertiesrow-lookupContainer-1-1"
            key="domainpropertiesrow-lookupContainer-1-1"
            onChange={[Function]}
            value="/StudyVerifyProject/My Study"
          >
            <FolderSelectImpl
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupContainer-1-1"
              name="domainpropertiesrow-lookupContainer"
              onChange={[Function]}
              value="/StudyVerifyProject/My Study"
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                context={
                  {
                    "activeContainer": Container {
                      "activeModules": [],
                      "effectivePermissions": [],
                      "folderType": "",
                      "formats": {
                        "dateFormat": "",
                        "dateTimeFormat": "",
                        "numberFormat": "",
                        "timeFormat": "",
                      },
                      "hasRestrictedActiveModule": false,
                      "iconHref": "",
                      "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                      "isContainerTab": false,
                      "isWorkbook": false,
                      "name": "My Study",
                      "parentId": "",
                      "parentPath": "",
                      "path": "/StudyVerifyProject/My Study",
                      "sortOrder": 0,
                      "startUrl": "",
                      "title": "",
                      "type": "",
                    },
                    "fetchContainers": [Function],
                    "fetchQueries": [Function],
                    "fetchSchemas": [Function],
                    "getExcludedSchemaQueryNames": [Function],
                  }
                }
                disabled={false}
                id="domainpropertiesrow-lookupContainer-1-1"
                name="domainpropertiesrow-lookupContainer"
                onChange={[Function]}
                value="/StudyVerifyProject/My Study"
              >
                <select
                  className="form-control"
                  context={
                    {
                      "activeContainer": Container {
                        "activeModules": [],
                        "effectivePermissions": [],
                        "folderType": "",
                        "formats": {
                          "dateFormat": "",
                          "dateTimeFormat": "",
                          "numberFormat": "",
                          "timeFormat": "",
                        },
                        "hasRestrictedActiveModule": false,
                        "iconHref": "",
                        "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                        "isContainerTab": false,
                        "isWorkbook": false,
                        "name": "My Study",
                        "parentId": "",
                        "parentPath": "",
                        "path": "/StudyVerifyProject/My Study",
                        "sortOrder": 0,
                        "startUrl": "",
                        "title": "",
                        "type": "",
                      },
                      "fetchContainers": [Function],
                      "fetchQueries": [Function],
                      "fetchSchemas": [Function],
                      "getExcludedSchemaQueryNames": [Function],
                    }
                  }
                  disabled={false}
                  id="domainpropertiesrow-lookupContainer-1-1"
                  name="domainpropertiesrow-lookupContainer"
                  onChange={[Function]}
                  value="/StudyVerifyProject/My Study"
                >
                  <option
                    key="_current"
                    value=""
                  >
                    Current 
                    Folder
                  </option>
                  <option
                    key="a21a06e1-4058-1037-95c6-1e81b2533cfd"
                    value="/StudyVerifyProject"
                  >
                    /StudyVerifyProject
                  </option>
                  <option
                    key="e0ea3e55-3420-1035-8057-68fea9bfb3a0"
                    value="/StudyVerifyProject/My Study"
                  >
                    /StudyVerifyProject/My Study
                  </option>
                </select>
              </FormControl>
            </FolderSelectImpl>
          </FolderSelect>
        </div>
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Schema
          </div>
          <SchemaSelect
            containerPath="/StudyVerifyProject/My Study"
            disabled={false}
            id="domainpropertiesrow-lookupSchema-1-1"
            key="domainpropertiesrow-lookupSchema-1-1"
            onChange={[Function]}
            value="study"
          >
            <SchemaSelectImpl
              containerPath="/StudyVerifyProject/My Study"
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupSchema-1-1"
              name="domainpropertiesrow-lookupSchema"
              onChange={[Function]}
              value="study"
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                disabled={false}
                id="domainpropertiesrow-lookupSchema-1-1"
                name="domainpropertiesrow-lookupSchema"
                onChange={[Function]}
                placeholder="Select Schema"
                value="study"
              >
                <select
                  className="form-control"
                  disabled={false}
                  id="domainpropertiesrow-lookupSchema-1-1"
                  name="domainpropertiesrow-lookupSchema"
                  onChange={[Function]}
                  placeholder="Select Schema"
                  value="study"
                >
                  <option
                    key="exp"
                    value="exp"
                  >
                    exp
                  </option>
                  <option
                    key="exp.data"
                    value="exp.data"
                  >
                    exp.data
                  </option>
                  <option
                    key="exp.materials"
                    value="exp.materials"
                  >
                    exp.materials
                  </option>
                  <option
                    key="lists"
                    value="lists"
                  >
                    lists
                  </option>
                  <option
                    key="study"
                    value="study"
                  >
                    study
                  </option>
                </select>
              </FormControl>
            </SchemaSelectImpl>
          </SchemaSelect>
        </div>
        <div
          className="col-xs-2"
        >
          <div
            className="domain-field-label"
          >
            Target Table
          </div>
          <TargetTableSelect
            containerPath="/StudyVerifyProject/My Study"
            disabled={false}
            id="domainpropertiesrow-lookupQueryValue-1-1"
            key="domainpropertiesrow-lookupQueryValue-1-1"
            lookupIsValid={true}
            lookupURI="http://www.w3.org/2001/XMLSchema#int"
            onChange={[Function]}
            schemaName="study"
            shouldDisableNonExists={true}
            value=""
          >
            <TargetTableSelectImpl
              containerPath="/StudyVerifyProject/My Study"
              context={
                {
                  "activeContainer": Container {
                    "activeModules": [],
                    "effectivePermissions": [],
                    "folderType": "",
                    "formats": {
                      "dateFormat": "",
                      "dateTimeFormat": "",
                      "numberFormat": "",
                      "timeFormat": "",
                    },
                    "hasRestrictedActiveModule": false,
                    "iconHref": "",
                    "id": "e0ea3e55-3420-1035-8057-68fea9bfb3a0",
                    "isContainerTab": false,
                    "isWorkbook": false,
                    "name": "My Study",
                    "parentId": "",
                    "parentPath": "",
                    "path": "/StudyVerifyProject/My Study",
                    "sortOrder": 0,
                    "startUrl": "",
                    "title": "",
                    "type": "",
                  },
                  "fetchContainers": [Function],
                  "fetchQueries": [Function],
                  "fetchSchemas": [Function],
                  "getExcludedSchemaQueryNames": [Function],
                }
              }
              disabled={false}
              id="domainpropertiesrow-lookupQueryValue-1-1"
              lookupIsValid={true}
              lookupURI="http://www.w3.org/2001/XMLSchema#int"
              name="domainpropertiesrow-lookupQueryValue"
              onChange={[Function]}
              schemaName="study"
              shouldDisableNonExists={true}
              value=""
            >
              <FormControl
                bsClass="form-control"
                componentClass="select"
                disabled={false}
                id="domainpropertiesrow-lookupQueryValue-1-1"
                name="domainpropertiesrow-lookupQueryValue"
                onChange={[Function]}
                value=""
              >
                <select
                  className="form-control"
                  disabled={false}
                  id="domainpropertiesrow-lookupQueryValue-1-1"
                  name="domainpropertiesrow-lookupQueryValue"
                  onChange={[Function]}
                  value=""
                >
                  <option
                    key="_default"
                  />
                  <option
                    disabled={false}
                  >
                     (
                    Lookup
                    )
                  </option>
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|Data"
                    value="http://www.w3.org/2001/XMLSchema#int|Data"
                  >
                    Data
                     (
                    Integer
                    )
                  </option>
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                    value="http://www.w3.org/2001/XMLSchema#int|DataInputs"
                  >
                    DataInputs
                     (
                    Integer
                    )
                  </option>
                  <option
                    disabled={false}
                    key="http://www.w3.org/2001/XMLSchema#int|Runs"
                    value="http://www.w3.org/2001/XMLSchema#int|Runs"
                  >
                    Runs
                     (
                    Integer
                    )
                  </option>
                </select>
              </FormControl>
            </TargetTableSelectImpl>
          </TargetTableSelect>
        </div>
        <div
          className="col-xs-6"
        >
          <div
            className="domain-field-label"
          >
            Lookup Validator
          </div>
          <Checkbox
            bsClass="checkbox"
            checked={false}
            className="domain-field-checkbox-margin"
            disabled={false}
            id="domainpropertiesrow-lookupValidator-1-1"
            inline={false}
            name="domainpropertiesrow-lookupValidator"
            onChange={[Function]}
            title=""
          >
            <div
              className="domain-field-checkbox-margin checkbox"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  id="domainpropertiesrow-lookupValidator-1-1"
                  name="domainpropertiesrow-lookupValidator"
                  onChange={[Function]}
                  type="checkbox"
                />
                <span
                  className="domain-lookup-validator-text"
                >
                  Ensure Value Exists in Lookup Target
                </span>
                <LabelHelpTip
                  title="Lookup Validator"
                >
                  <OverlayTrigger
                    id="label-help-tip2"
                    overlay={
                      <Popover
                        id="label-help-tip-popover"
                        title="Lookup Validator"
                      >
                        <div>
                          Lookup validators allow you to require that any value is present in the lookup's target table or query
                        </div>
                      </Popover>
                    }
                  >
                    <div
                      className="overlay-trigger"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="label-help-target"
                      >
                        <span
                          className="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </OverlayTrigger>
                </LabelHelpTip>
              </label>
            </div>
          </Checkbox>
        </div>
      </div>
    </div>
  </LookupFieldOptions>
</MockLookupProvider>
`;
